--- a/src/index.html
+++ b/src/index.html
@@ -4,35 +4,20 @@
 <head>
   <meta charset="utf-8" />
   <title>Advent of Code 2022</title>
-  <style>
-    form {
-      display: flex;
-      flex-direction: column;
-    }
-
-    label {
-      margin-top: 0.5rem;
-      margin-bottom: 0.5rem;
-    }
-  </style>
 </head>
 
 <body>
   <h1>Advent of Code 2022</h1>
   <p>A place for shenanigans.</p>
-  <form action="POST">
-    <label>
-      Day to solve:
-      <select name="day">
-        <option value="1">1</option>
-      </select>
-    </label>
-    <label>
-      Input file:
-      <input name="input" type="file" />
-    </label>
-    <button type="submit">Send</button>
-  </form>
+  <dl>
+    <dt>Day 1</dt>
+    <dd>
+      <ul>
+        <li><a href="/01-1">01-1</a></li>
+        <li><a href="/01-2">01-2</a></li>
+      </ul>
+    </dd>
+  </dl>
 </body>
 
 </html>
