Link AoC 2022 in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1>Advent of Code 2022</h1>
-  <p>A place for shenanigans.</p>
+  <p>A place for shenanigans related to <a target="_blank" href="https://adventofcode.com/2022">AoC 2022</a>.</p>
   <dl>
     <dt>Day 1</dt>
     <dd>
