--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,13 @@
         <li><a href="/01-2">01-2</a></li>
       </ul>
     </dd>
+    <dt>Day 2</dt>
+    <dd>
+      <ul>
+        <li><a href="/02-1">02-1</a></li>
+        <li><a href="/02-2">02-2</a></li>
+      </ul>
+    </dd>
   </dl>
 </body>
 
