link GitHub in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
 
 <body>
   <h1>Advent of Code 2022</h1>
-  <p>A place for shenanigans related to <a target="_blank" href="https://adventofcode.com/2022">AoC 2022</a>.</p>
+  <p>
+    A place for shenanigans related to <a href="https://adventofcode.com/2022">adventofcode.com/2022</a>.
+    Source on GitHub: <a href="https://github.com/runjak/aoc-2022">github.com/runjak/aoc-2022</a>.
+  </p>
   <dl>
     <dt>Day 1</dt>
     <dd>
