--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,13 @@
         <li><a href="/02-2">02-2</a></li>
       </ul>
     </dd>
+    <dt>Day 3</dt>
+    <dd>
+      <ul>
+        <li><a href="/03-1">03-1</a></li>
+        <li><a href="/03-2">03-2</a></li>
+      </ul>
+    </dd>
   </dl>
 </body>
 
