prepare for task 04

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,13 @@
         <li><a href="/03-2">03-2</a></li>
       </ul>
     </dd>
+    <dt>Day 4</dt>
+    <dd>
+      <ul>
+        <li><a href="/04-1">04-1</a></li>
+        <li><a href="/04-2">04-2</a></li>
+      </ul>
+    </dd>
   </dl>
 </body>
 
