prepare for task 05

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,13 @@
         <li><a href="/04-2">04-2</a></li>
       </ul>
     </dd>
+    <dt>Day 5</dt>
+    <dd>
+      <ul>
+        <li><a href="/05-1">05-1</a></li>
+        <li><a href="/05-2">05-2</a></li>
+      </ul>
+    </dd>
   </dl>
 </body>
 
