prepare for task 06

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,13 @@
         <li><a href="/05-2">05-2</a></li>
       </ul>
     </dd>
+    <dt>Day 6</dt>
+    <dd>
+      <ul>
+        <li><a href="/06-1">06-1</a></li>
+        <li><a href="/06-2">06-2</a></li>
+      </ul>
+    </dd>
   </dl>
 </body>
 
